Alignment correction for home teams

--- a/assets/CSS/homeTeam.css
+++ b/assets/CSS/homeTeam.css
@@ -14,6 +14,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
   .profile-card {
     position: relative;
